--- a/todo
+++ b/todo
@@ -17,11 +17,19 @@
 --
 
 
+longpressed + ctrl / shift alt
+
 Pause All sites
 
 Pause A page
 
 Pause a domain
+
+
+
+BUG TF OPERATION oK?
+
+border based on console
 
 
 
